--- a/CHANGELOG
+++ b/CHANGELOG
@@ -14,6 +14,18 @@
 
 - Add child mentions to "concrete-inspect.py --entities" output.
 
+- concrete.util.simple_comm.create_sentence now sets Token.textSpan field
+
+- CommunicationWriterTar.write() now uses CommID for default filename
+
+- concrete.validate.validate_communication_file() now returns a boolean
+
+- Added script access-http-server.py
+
+- Now using Sphinx to generate documentation
+
+- fetch-client.py can now read Communication IDs from stdin,
+  and save Communications to a TGZ file
 
 4.12.7 (2017-01-29)
 -------------------
