--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,7 @@
 4.12.10 (unreleased)
 --------------------
 
-- Nothing changed yet.
+- Print situation mention kind and intensity in concrete.inspect
 
 
 4.12.9 (2017-05-13)
