--- a/AUTHORS
+++ b/AUTHORS
@@ -9,5 +9,8 @@ contact us if there has been an error:
 * Joel Coffman
 * Chandler May
 * Tom Lippincott
+* Adam Teichert
+* Matt Post
+* Adam Poliak
 
-Updated 2017-01-17.
+Updated 2017-05-16.
