--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,7 @@
-4.12.11 (unreleased)
---------------------
+4.13.0 (2017-07-18)
+-------------------
 
-- Nothing changed yet.
+- Updated to concrete 4.13 schema.
 
 
 4.12.10 (2017-06-27)
