--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,7 @@
 4.13.2 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Add S3 fetch and store server scripts.
 
 
 4.13.1 (2017-07-29)
