--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 4.14.1 (unreleased)
 -------------------
+- Updated Thrift dependency from 0.10.0 to 0.11.0
 
 - Added `--uri` flag for THttp/TJSONProtocol support to
 `scripts/annotate-communication-client.py` and
