--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,8 +1,11 @@
 4.15.2 (unreleased)
 -------------------
 
+- Update Thrift to 0.16
 - Fixed incompatibility with Python 3.8 caused by use of deprecated
   name for Python standard library class
+- Add support for Python 3.10
+- Drop support for Python 3.5, 3.6
 
 
 4.15.1 (2019-05-19)
