--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,8 @@
-4.17.1 (unreleased)
+4.18.0 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Updated to Concrete schema 4.18, which adds
+  AnnotateCommunicationBatchService
 
 
 4.17.0 (2023-02-06)
