--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,8 @@
 4.18.2 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Fix bug, improve error reporting in annotate batch client.
+- Remove errant print statement.
 
 
 4.18.1 (2023-07-09)
